Centered image and prevented it from getting too big on larger screens

--- a/style.css
+++ b/style.css
@@ -28,3 +28,18 @@ h1 {
 p {
   padding-bottom: 1em; /* 18px / 18px */
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding-bottom: 1.222em;
+}
+
+@media only screen and (min-width: 480px) {
+  img {
+    height: 12.222em;
+    width: auto;
+  }
+}
